2002-10-11 22:56  xfce

	* xfce4.spec.in: Fix xfce4.spec file still pointing on old plugin
	location.

2002-10-11 16:18  huysmans

	* panel/Makefile.am, panel/Makefile.in, panel/global.h,
	panel/xfce_support.c, plugins/clock/Makefile.am,
	plugins/clock/Makefile.in, plugins/mailcheck/Makefile.am,
	plugins/mailcheck/Makefile.in, plugins/trash/Makefile.am,
	plugins/trash/Makefile.in: Move plugins under /usr/lib (FHS
	compliant). Thanks to Martin Loschwitz for bringing it up.

2002-10-10 17:43  huysmans

	* panel/builtins.c: Fix bug in builtins (stupid gcc 3.2 didn't
	complain)

2002-10-10 17:40  huysmans

	* panel/item_dialog.c: Fix bug where popup menu disappears if you
	press Add icon

2002-10-10 08:46  huysmans

	* ChangeLog, panel/dialogs.c, panel/global.h, panel/popup.c,
	panel/popup.h, panel/side.c, panel/side.h, panel/xfce.c,
	panel/xfce.h: Remove popup_size option and change add-to-menu icon

2002-10-10 00:31  huysmans

	* panel/Makefile.am, panel/Makefile.in, panel/builtins.c,
	panel/builtins.h, panel/controls.c, panel/iconbutton.c,
	panel/iconbutton.h, panel/item.c, panel/item.h,
	plugins/mailcheck/mailcheck.c, plugins/trash/trash.c: Use
	xfce_iconbutton widget for panel items

2002-10-09 00:13  huysmans

	* panel/: callbacks.c, item_dialog.c, popup.c, popup.h: New popup
	buttons. Really this time

2002-10-09 00:06  huysmans

	* panel/: builtins.c, controls.c, controls.h, popup.h: Oops used an
	old tree to commit. Revert.

2002-10-08 23:27  huysmans

	* panel/: builtins.c, controls.c, controls.h, popup.h: Use new
	xfce_togglebutton from libxfcegui4

2002-10-07 21:18  huysmans

	* icons/Makefile.am, icons/Makefile.in, icons/close.xpm,
	icons/handle.xpm, icons/iconify.xpm, panel/handle.c, panel/icons.c,
	panel/icons.h: Fix position saving bug

2002-10-07 16:36  huysmans

	* ChangeLog, panel/xfce.c: Increase size popup buttons by two
	pixels

2002-10-07 08:25  huysmans

	* ChangeLog, panel/handle.c: Add new decorbuttons

2002-10-06 23:32  huysmans
