@@ -1,3 +1,9 @@
+2002-10-18 11:57  huysmans
+
+	* ChangeLog, autogen.sh, panel/callbacks.c, panel/icons.h,
+	panel/item_dialog.c, panel/popup.c, panel/popup.h: Use
+	xfce_menubutton widget in popup menus
+
 2002-10-11 22:56  xfce
 
 	* xfce4.spec.in: Fix xfce4.spec file still pointing on old plugin
